# Exodus2025_RoboticArm

./: .gitignore  LICENSE  README.md  arm_aliases
src/: test_servo_input.py
src/arm_bringup/: CMakeLists.txt  package.xml
src/arm_bringup/config/: controllers.yaml  cubemars_test.ros2_control.xacro
src/arm_bringup/launch/: cubemars_test.launch.py
src/arm_bringup/urdf/: cubemars_test.ros2_control.urdf.xacro
src/arm_controller/: CMakeLists.txt  README.md  package.xml
src/arm_controller/config/: controllers.yaml
src/arm_controller/launch/: arm.launch.py  cubemars_test.launch.py  dynamixel_test.launch.py
src/arm_controller/urdf/: cubemars_test.ros2_control.urdf.xacro  dynamixel_test.ros2_control.urdf.xacro
src/arm_description/: CMakeLists.txt  README.md  package.xml
src/arm_description/config/: view_robot.rviz
src/arm_description/launch/: view_robot.launch.py
src/arm_description/meshes/: .gitkeep  base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL
src/arm_description/urdf/: Arm_MoveIt_Assembly.SLDASM.urdf  Arm_MoveIt_Assembly_2.SLDASM.urdf  arm.ros2_control.xacro  arm.urdf.xacro
src/arm_moveit_config/: CMakeLists.txt  README.md  package.xml
src/arm_moveit_config/config/: Arm_MoveIt_Assembly.SLDASM.srdf  arm.srdf  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  servo.yaml  xbox_teleop.yaml
src/arm_moveit_config/launch/: joy_to_servo.py  moveit.launch.py  servo.launch.py  start_all.launch.py  twist_to_twist_stamped.py
src/arm_moveit_config/scripts/: for_omry  joy_to_servo.py
src/arm_moveit_config/src/: servo_node.cpp
src/arm_zed_camera_py_pkg/: package.xml  setup.cfg  setup.py
src/arm_zed_camera_py_pkg/arm_zed_camera_py_pkg/: ArucoDetector.py  orange_detector.py  zed_vs.py
src/cubemars_hardware/: CMakeLists.txt
src/cubemars_hardware/src/: system.cpp
src/dynamixel_interface/: CMakeLists.txt  README.txt  dynamixel_interface.xml  package.xml
src/dynamixel_interface/include/dynamixel_interface/: dynamixel_system.hpp  visibility_control.h
src/dynamixel_interface/src/: dynamixel_system.cpp
